Add hitpointbar to Guidebook
Guidebook.mn and Guidebook.tex specifically, for reasons stated earlier.

--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -3196,6 +3196,10 @@ NetHack should use this size font for text windows.
 \item[\ib{fullscreen}]
 NetHack should try and display on the entire screen rather than in a window.
 %.lp
+\item[\ib{hitpointbar}]
+NetHack should show a graphical bar representing current hit points if it
+wouldn't otherwise.
+%.lp
 \item[\ib{large\verb+_+font}]
 NetHack should use a large font.
 %.lp
